# NotebookMg

./: .gitignore  Dockerfile  README.md  app.py  drive_manager.py  examples.py  generate_drive_token.py  main.py  pyproject.toml  requirements.txt  run.py  test.py
static/: styles.css
templates/: index.html  library.html
